code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__agent_run_grouped_plain_tool_name.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: output
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+



 › Kick off QA bot regression run

   +- qa-bot
   |
   |  Run targeted regression suite
   |
   |  Agents
   |    • claude  running  (Xs)
   |
   |  Actions
   |   MM:SS  Started agent run for qa-bot
   |
   +- [Ctrl+A] Expand · [Esc] Stop

 +----------------------------- ✶ Responding... -----------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Read Only  (Shift+Tab change)                       Ctrl+H help  •  API key
