code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_continue_mode_transitions.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 371
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+


  Auto Drive > Working  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Enabled  •  Diagnostics Enabled Ctrl+S settings • Esc stop Auto Drive

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+


  Auto Drive > Working  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Enabled  •  Diagnostics Enabled Ctrl+S settings • Esc stop Auto Drive

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+


  Auto Drive > Working  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Enabled  •  Diagnostics Enabled Ctrl+S settings • Esc stop Auto Drive
