code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_countdown_auto_submit.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
expression: "frames.join(\"\\n---FRAME---\\n\")"
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+


  Auto Drive > Working  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Disabled  •  Diagnostics Enabl... Ctrl+S settings • Esc stop Auto Drive

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+


  Auto Drive > Working  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Disabled  •  Diagnostics Enabl... Ctrl+S settings • Esc stop Auto Drive

---FRAME---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+


  Auto Drive > Running cargo fmt --check.  ✶ Thinking (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Disabled  •  Diagnostics Enabl... Ctrl+S settings • Esc stop Auto Drive
