code-rs/tui/tests/snapshots/vt100_chatwidget_snapshot__auto_drive_manual_mode_waits.snap
---
source: tui/tests/vt100_chatwidget_snapshot.rs
assertion_line: 533
expression: frame
---
 +----------------------------------------------------------------------------+
 |                                    Code                                    |
 +----------------------------------------------------------------------------+


  Auto Drive > Working  ✶ Running (Xs)
 +----------------------------------------------------------------------------+
 | What can I code for you today?                                             |
 +----------------------------------------------------------------------------+
   Agents Enabled  •  Diagnostics Enabled Ctrl+S settings • Esc stop Auto Drive
